feat(admin): make testimonials update approved functionality

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -10,6 +10,11 @@ main {
     padding: 48px 0 0;
 }
 
+.section-image {
+    width: 100%;
+    max-width: 180px;
+}
+
 /*------------------------------------------ NAVBAR */
 
 .navbar-brand {
