feat(admin): make update and delete functionality for skills

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -65,7 +65,7 @@
                     </ul>
                     <ul class="nav flex-column mb-2">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="{{ url_for('get_skills') }}">
                                 <i class="bi bi-puzzle"></i>
                                 Skills
                             </a>
