--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -83,7 +83,7 @@ main {
     color: inherit;
 }
 
-/*------------------------------------------ SIDEBAR */
+/*------------------------------------------ LOGIN */
 
 .body-login {
     display: flex;
@@ -114,4 +114,36 @@ main {
     margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+}
+
+/*------------------------------------------ SKILLS */
+
+.range-wrap {
+    position: relative;
+    margin: 0 auto 2rem;
+}
+
+.range {
+    width: 100%;
+}
+
+.bubble {
+    background: var(--accent-dark);
+    color: var(--text-light);
+    padding: 4px 12px;
+    position: absolute;
+    border-radius: 4px;
+    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.bubble::after {
+    content: "";
+    position: absolute;
+    width: 2px;
+    height: 2px;
+    background: var(--accent-dark);
+    top: -1px;
+    left: 50%;
 }
