--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -1,7 +1,14 @@
 {% extends "admin/base.html" %}
 {% block content %}
 <section id="dashboard">
-    <h2>Dashboard</h2>
+    <div class="row my-2 align-items-center">
+        <div class="order-1 order-sm-0 col-sm-8 col-md-9 col-lg-10">
+            <h1 class="text-start my-2">Dashboard</h1>
+        </div>
+        <div class="order-0 order-sm-1 col-8 offset-2 offset-sm-0 col-sm-4 col-md-3 col-lg-2 text-center">
+            <img src="{{ url_for('static', filename='images/dashboard.svg') }}" alt="Dashboard" class="section-image">
+        </div>
+    </div>
     content
 </section>
 {% endblock content %}
