--- a/templates/admin/add_skill.html
+++ b/templates/admin/add_skill.html
@@ -1,6 +1,6 @@
 {% extends "admin/base.html" %}
 {% block content %}
-<section id="get_skills">
+<section id="add_skill">
     <div class="row my-2 align-items-center">
         <div class="order-1 order-sm-0 col-sm-8 col-md-9 col-lg-10">
             <h1 class="text-start my-2">Add New Skill</h1>
