--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -22,8 +22,8 @@
 
     <header class="navbar bg-accent-transparent fixed-top flex-md-nowrap p-0 shadow">
         <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">{&pi;} Dev.PI</a>
-        <button class="navbar-toggler position-absolute d-md-none collapsed text-shadow" type="button" data-bs-toggle="collapse"
-            data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false"
+        <button class="navbar-toggler position-absolute d-md-none collapsed text-shadow" type="button"
+            data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false"
             aria-label="Toggle navigation">
             <i class="bi bi-list"></i>
         </button>
@@ -91,7 +91,7 @@
                     </ul>
                     <ul class="nav flex-column mb-2">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">
+                            <a class="nav-link" aria-current="page" href="{{ url_for('get_links') }}">
                                 <i class="bi bi-share"></i>
                                 Links
                             </a>
@@ -123,31 +123,35 @@
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                 <!-- flash messages -->
                 {% with messages = get_flashed_messages() %}
-                    {% if messages %}
-                        <div class="toast-container position-absolute top-1 start-50 translate-middle-x p-3 w-75" style="z-index: 5">
-                        {% for message in messages %}
-                            <div class="d-flex w-100 toast" role="alert" aria-live="assertive" aria-atomic="true">
-                                <span class="m-auto px-2">
-                                    <i class="bi bi-bell-fill"></i>
-                                </span>
-                                <div class="toast-body">
-                                    <h4>{{ message }}</h4>
-                                </div>
-                                <a href="" class="me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"><i class="bi bi-x-circle"></i></a>
-                            </div>
-                        {% endfor %}
+                {% if messages %}
+                <div class="toast-container position-absolute top-1 start-50 translate-middle-x p-3 w-75"
+                    style="z-index: 5">
+                    {% for message in messages %}
+                    <div class="d-flex w-100 toast" role="alert" aria-live="assertive" aria-atomic="true">
+                        <span class="m-auto px-2">
+                            <i class="bi bi-bell-fill"></i>
+                        </span>
+                        <div class="toast-body">
+                            <h4>{{ message }}</h4>
                         </div>
-                    {% endif %}
+                        <a href="" class="me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"><i
+                                class="bi bi-x-circle"></i></a>
+                    </div>
+                    {% endfor %}
+                </div>
+                {% endif %}
                 {% endwith %}
                 {% block content %}
-                
+
                 {% endblock content %}
             </main>
         </div>
     </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <script src="{{ url_for('static', filename='js/admin.js') }}"></script>
