--- a/templates/admin/skills.html
+++ b/templates/admin/skills.html
@@ -22,18 +22,22 @@
         <ul class="list-group list-group-flush">
             {% for skill in skills %}
                 <li class="list-group-item d-flex justify-content-between">
-                    <div>
-                        <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="name[{{ skill._id }}]" name="name[{{ skill._id }}]" value="{{ skill.name }}">
-                            <label for="name[{{ skill._id }}]">Skill</label>
+                    <div class="row w-100 align-items-center">
+                        <div class="col-12 col-md-6">
+                            <div class="form-floating mb-3">
+                                <input type="text" class="form-control" id="name[{{ skill._id }}]" name="name[{{ skill._id }}]" value="{{ skill.name }}">
+                                <label for="name[{{ skill._id }}]">Skill</label>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <div class="range-wrap">
+                                <label for="percentage[{{ skill._id }}]" class="form-label">Percentage</label>
+                                <input type="range" class="range form-range" id="percentage[{{ skill._id }}]" name="percentage[{{ skill._id }}]" min="0" max="100" value="{{ skill.percentage }}">
+                                <output class="bubble"></output>
+                            </div>
                         </div>
                     </div>
-                    <div class="range-wrap">
-                        <label for="percentage[{{ skill._id }}]" class="form-label">Percentage</label>
-                        <input type="range" class="range form-range" id="percentage[{{ skill._id }}]" name="percentage[{{ skill._id }}]" min="0" max="100" value="{{ skill.percentage }}">
-                        <output class="bubble"></output>
-                    </div>
-                    <div class="controls d-flex align-items-baseline">
+                    <div class="controls d-flex align-items-center ms-4">
                         <a href="{{ url_for('delete_skill', id=skill._id) }}" class="btn btn-sm btn-danger confirm"><i class="bi bi-trash"></i></a>
                     </div>
                 </li>
