--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -15,6 +15,12 @@ main {
     max-width: 180px;
 }
 
+.card {
+    border-radius: 1rem;
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, .3);
+    background-color: var(--accent-light);
+}
+
 /*------------------------------------------ BUTTONS */
 
 .btn-round {
