--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -97,7 +97,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">
+                            <a class="nav-link" aria-current="page" href="{{ url_for('settings') }}">
                                 <i class="bi bi-sliders"></i>
                                 Settings
                             </a>
