--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -57,7 +57,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">
+                            <a class="nav-link" aria-current="page" href="{{ url_for('get_blogs') }}">
                                 <i class="bi bi-blockquote-left"></i>
                                 Blog
                             </a>
