--- a/templates/admin/add_link.html
+++ b/templates/admin/add_link.html
@@ -11,6 +11,7 @@
     </div>
     <div class="card col-md-10 offset-md-1 col-lg-8 offset-lg-2">
         <form action="{{ url_for('add_link') }}" method="POST">
+            <div class="card-header"></div>
             <div class="card-body">
                 <div class="form-floating mb-3">
                     <input type="text" class="form-control" id="name" name="name" placeholder="GitHub">
@@ -27,7 +28,8 @@
                             Icons</a></small>
                 </div>
             </div>
-            <div class="card-footer text-center">
+            <div class="card-footer text-center d-flex justify-content-between">
+                <a href="{{ url_for('get_links') }}" class="btn btn-lg btn-danger">Cancel</a>
                 <button type="submit" class="btn btn-lg btn-accent">Add</button>
             </div>
         </form>
