--- a/templates/admin/add_skill.html
+++ b/templates/admin/add_skill.html
@@ -11,6 +11,7 @@
     </div>
     <div class="card col-md-10 offset-md-1 col-lg-8 offset-lg-2">
         <form action="{{ url_for('add_skill') }}" method="POST">
+            <div class="card-header"></div>
             <div class="card-body">
                 <div class="form-floating mb-3">
                     <input type="text" class="form-control" id="name" name="name" placeholder="HTML">
@@ -22,7 +23,8 @@
                     <output class="bubble"></output>
                 </div>
             </div>
-            <div class="card-footer text-center">
+            <div class="card-footer text-center d-flex justify-content-between">
+                <a href="{{ url_for('get_skills') }}" class="btn btn-lg btn-danger">Cancel</a>
                 <button type="submit" class="btn btn-lg btn-accent">Add</button>
             </div>
         </form>
