--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -15,6 +15,7 @@
         type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/admin.css') }}" type="text/css">
+    {% block styles %}{% endblock styles %}
     <title>{{ settings.meta_title }} - Dashboard</title>
 </head>
 
@@ -155,6 +156,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <script src="{{ url_for('static', filename='js/admin.js') }}"></script>
+    {% block scripts %}{% endblock scripts %}
 </body>
 
 </html>
