--- a/templates/admin/add_blog.html
+++ b/templates/admin/add_blog.html
@@ -11,7 +11,9 @@
     </div>
     <div class="card col-md-10 offset-md-1 col-lg-8 offset-lg-2">
         <form action="{{ url_for('add_blog') }}" method="POST">
-            <div class="card-header"></div>
+            <div class="card-header">
+                <h4 class="text-center">New</h4>
+            </div>
             <div class="card-body">
                 <div class="form-floating mb-3">
                     <input type="text" class="form-control" id="title" name="title" placeholder="New Post Title">
