--- a/templates/admin/blogs.html
+++ b/templates/admin/blogs.html
@@ -16,7 +16,7 @@
     </div>
     <div class="card">
         <div class="card-header text-center">
-            List
+            <h4 class="text-center">List</h4>
         </div>
         <ul class="list-group list-group-flush">
             {% for blog in blogs %}
