--- a/templates/admin/edit_blog.html
+++ b/templates/admin/edit_blog.html
@@ -11,7 +11,9 @@
     </div>
     <div class="card col-md-10 offset-md-1 col-lg-8 offset-lg-2">
         <form action="{{ url_for('edit_blog', id=post._id) }}" method="POST">
-            <div class="card-header"></div>
+            <div class="card-header">
+                <h4 class="text-center">Edit</h4>
+            </div>
             <div class="card-body">
                 <div class="form-floating mb-3">
                     <input type="text" class="form-control" id="title" name="title" value="{{ post.title }}">
@@ -33,7 +35,7 @@
             </div>
             <div class="card-footer text-center d-flex justify-content-between">
                 <a href="{{ url_for('get_blogs') }}" class="btn btn-lg btn-danger">Cancel</a>
-                <button type="submit" class="btn btn-lg btn-accent">Edit</button>
+                <button type="submit" class="btn btn-lg btn-accent confirm">Update</button>
             </div>
         </form>
     </div>
