--- a/templates/admin/settings.html
+++ b/templates/admin/settings.html
@@ -11,6 +11,9 @@
     </div>
     <div class="card col-md-10 offset-md-1 col-lg-8 offset-lg-2">
         <form action="{{ url_for('settings') }}" method="POST">
+            <div class="card-header">
+                <h4 class="text-center">Edit</h4>
+            </div>
             <div class="card-body">
                 <div class="form-floating mb-3">
                     <input type="text" class="form-control" id="name" name="name" value="{{ settings.name }}">
