feat(admin): make create functionality for education

--- a/templates/admin/education.html
+++ b/templates/admin/education.html
@@ -11,7 +11,7 @@
     </div>
     <div class="row">
         <div class="col">
-            {# <a href="{{ url_for('add_education') }}" class="btn btn-round btn-success float-end m-4" data-bs-toggle="tooltip" data-bs-placement="left" title="Add new"><i class="bi bi-plus"></i></a> #}
+            <a href="{{ url_for('add_education') }}" class="btn btn-round btn-success float-end m-4" data-bs-toggle="tooltip" data-bs-placement="left" title="Add new"><i class="bi bi-plus"></i></a>
         </div>
     </div>
     <div class="card">
