--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -78,7 +78,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="{{ url_for('get_experience') }}">
                                 <i class="bi bi-briefcase"></i>
                                 Experience
                             </a>
