feat(admin): make read functionality for projects

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -84,7 +84,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="{{ url_for('get_projects') }}">
                                 <i class="bi bi-display"></i>
                                 Projects
                             </a>
