--- a/templates/admin/edit_blog.html
+++ b/templates/admin/edit_blog.html
@@ -50,11 +50,12 @@
                             <label for="current-photo">Current Photo:</label>
                             <img class="img-thumbnail w-50" src="{{ url_for('uploads', filename=post.photo) }}" alt="{{ post.title }}">
                         {% else %}
-                            <label>No Photo</label>
+                            <label>No Current Photo</label>
                         {% endif %}
                         <div class="mb-3">
                             <label for="photo" class="form-label">New Photo</label>
                             <input class="form-control" id="photo" name="photo" type="file">
+                            <small>Submit this form empty to remove photo</small>
                         </div>
                     </div>
                     <div class="card-footer text-center d-flex justify-content-between">
