--- a/templates/admin/add_blog.html
+++ b/templates/admin/add_blog.html
@@ -1,4 +1,6 @@
 {% extends "admin/base.html" %}
+{% block styles %}
+{% endblock styles %}
 {% block content %}
 <section id="add_post">
     <div class="row my-2 align-items-center">
@@ -10,7 +12,7 @@
         </div>
     </div>
     <div class="card col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-        <form action="{{ url_for('add_blog') }}" method="POST" enctype="multipart/form-data">
+        <form action="{{ url_for('add_blog') }}" method="POST" enctype="multipart/form-data" id="dropzoneForm">
             <div class="card-header">
                 <h4 class="text-center">New</h4>
             </div>
