--- a/templates/admin/edit_blog.html
+++ b/templates/admin/edit_blog.html
@@ -48,7 +48,12 @@
                     <div class="card-body">
                         {% if post.photo|length %}
                             <label for="current-photo">Current Photo:</label>
-                            <img class="img-thumbnail w-50" src="{{ url_for('uploads', filename=post.photo) }}" alt="{{ post.title }}">
+                            <div class="photo-container">
+                                <img class="img-thumbnail w-50" src="{{ url_for('uploads', filename=post.photo) }}" alt="{{ post.title }}">
+                                <a href="{{ url_for('photos') }}" class="delete-photo confirm btn btn-danger" data-collection="blogs" data-doc-id="{{ post._id }}" data-photo-key="0">
+                                    <i class="bi bi-trash-fill"></i>
+                                </a>
+                            </div>
                         {% else %}
                             <label>No Current Photo</label>
                         {% endif %}
@@ -69,4 +74,5 @@
 {% endblock content %}
 {% block scripts %}
 <script src="{{ url_for('static', filename='js/slugify.js') }}"></script>
+<script src="{{ url_for('static', filename='js/photos.js') }}"></script>
 {% endblock scripts %}
