--- a/templates/blog-post.html
+++ b/templates/blog-post.html
@@ -34,7 +34,7 @@
         <div class="row mb-4">
             <div class="col">
                 <figure class="float-start col-sm-6 col-md-4">
-                    <img src="{{ post.photo }}" alt="{{ post.title }}" class="post-photo">
+                    <img src="{{ post.photos }}" alt="{{ post.title }}" class="post-photo">
                 </figure>
                 <h3 class="post-title">{{ post.title }}</h3>
                 <p><small class="text-muted">{{ post.added_on }}</small></p>
