--- a/templates/admin/edit_blog.html
+++ b/templates/admin/edit_blog.html
@@ -46,11 +46,11 @@
                         <h4 class="text-center">Photo</h4>
                     </div>
                     <div class="card-body">
-                        {% if post.photo|length %}
+                        {% if post.photos|length %}
                             <label for="current-photo">Current Photo:</label>
                             <div class="photo-container">
-                                <img class="img-thumbnail w-50" src="{{ url_for('uploads', filename=post.photo) }}" alt="{{ post.title }}">
-                                <a href="{{ url_for('photos') }}" class="delete-photo confirm btn btn-danger" data-collection="blogs" data-doc-id="{{ post._id }}" data-photo-key="0">
+                                <img class="img-thumbnail w-50" src="{{ url_for('uploads', filename=post.photos) }}" alt="{{ post.title }}">
+                                <a href="{{ url_for('photos')}}" class="delete-photo confirm btn btn-danger" data-collection="blogs" data-doc-id="{{ post._id }}" data-photo-key="0">
                                     <i class="bi bi-trash-fill"></i>
                                 </a>
                             </div>
