style(admin): replace format with f-string and css style photo section for blog edit

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -179,3 +179,9 @@ main {
     top: -1px;
     left: 50%;
 }
+
+/*------------------------------------------ PHOTO EDIT */
+
+.photo-container .btn {
+    margin-top: -4rem;
+}
