--- a/templates/admin/edit_blog.html
+++ b/templates/admin/edit_blog.html
@@ -45,11 +45,11 @@
                     <div class="card-header">
                         <h4 class="text-center">Photo</h4>
                     </div>
-                    <div class="card-body">
+                    <div class="card-body row justify-content-center g-2">
                         {% if post.photos|length %}
                             <label for="current-photo">Current Photo:</label>
-                            <div class="photo-container">
-                                <img class="img-thumbnail w-50" src="{{ url_for('uploads', filename=post.photos) }}" alt="{{ post.title }}">
+                            <div class="photo-container col-sm-4 col-md-6 col-lg-4">
+                                <img class="img-thumbnail" src="{{ url_for('uploads', filename=post.photos) }}" alt="{{ post.title }}">
                                 <a href="{{ url_for('photos')}}" class="delete-photo confirm btn btn-danger" data-collection="blogs" data-doc-id="{{ post._id }}" data-photo-key="0">
                                     <i class="bi bi-trash-fill"></i>
                                 </a>
