--- a/templates/admin/add_blog.html
+++ b/templates/admin/add_blog.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="photo" class="form-label">Photo</label>
-                    <input class="form-control" id="photo" name="photo" type="file">
+                    <input class="form-control" id="photo" name="photo" type="file" accept="image/*">
                 </div>
                 <div class="form-floating mb-3">
                     <textarea class="form-control" rows="3" id="body" name="body" style="height: 100px;"
