--- a/templates/admin/edit_blog.html
+++ b/templates/admin/edit_blog.html
@@ -50,7 +50,7 @@
                             <label for="current-photo">Current Photo:</label>
                             <div class="photo-container col-sm-4 col-md-6 col-lg-4">
                                 <img class="img-thumbnail" src="{{ url_for('uploads', filename=post.photos) }}" alt="{{ post.title }}">
-                                <a href="{{ url_for('photos')}}" class="delete-photo confirm btn btn-danger" data-collection="blogs" data-doc-id="{{ post._id }}" data-photo-key="0">
+                                <a href="#" class="delete-photo confirm btn btn-danger" data-photo-key="0">
                                     <i class="bi bi-trash-fill"></i>
                                 </a>
                             </div>
@@ -58,14 +58,22 @@
                             <label>No Current Photo</label>
                         {% endif %}
                         <div class="mb-3">
-                            <label for="photo" class="form-label">New Photo</label>
-                            <input class="form-control" id="photo" name="photo" type="file">
-                            <small>Submit this form empty to remove photo</small>
+                            <input type="hidden" id="url-for-photos" value="{{ url_for('photos')}}">
+                            <input type="hidden" id="collection" value="blogs">
+                            <input type="hidden" id="doc-id" value="{{ post._id }}">
+                            <label for="drop-file-elem" class="form-label">New Photo</label>
+                            <noscript>
+                                <input class="form-control" id="drop-file-elem" name="photo" type="file">
+                            </noscript>
+                            <div id="drop-area"></div>
+                            <small>This will replace the current image (if any). Empty submit will simply remove photo.</small>
                         </div>
                     </div>
-                    <div class="card-footer text-center d-flex justify-content-between">
-                        <button type="submit" name="blog-photo" class="btn btn-lg btn-accent confirm">Submit</button>
-                    </div>
+                    <noscript>
+                        <div class="card-footer text-center d-flex justify-content-between">
+                            <button type="submit" name="blog-photo" class="btn btn-lg btn-accent confirm" id="photo-submit">Submit</button>
+                        </div>
+                    </noscript>
                 </form>
             </div>
         </div>
