--- a/templates/admin/edit_blog.html
+++ b/templates/admin/edit_blog.html
@@ -60,8 +60,12 @@
                         <input type="hidden" id="url-for-photos" value="{{ url_for('photos')}}">
                         <input type="hidden" id="collection" value="blogs">
                         <input type="hidden" id="doc-id" value="{{ post._id }}">
-                        <label for="drop-file-elem" class="form-label">New Photo</label>
-                        <div id="drop-area" data-multiple="false"></div>
+                        <label for="drop-area" class="form-label">New Photo</label>
+                        <input type="file" name="photos" id="drop-file-elem">
+                        <div id="drop-area" data-multiple="false">
+                            <i class="bi bi-upload"></i>
+                            Drag&drop file here or click to select...
+                        </div>
                         <small>This will replace the current image (if any). Empty submit will simply remove photo.</small>
                     </div>
                 </div>
