--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -123,25 +123,24 @@
 
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                 <!-- flash messages -->
-                {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                <div class="toast-container position-absolute top-1 start-50 translate-middle-x p-3 w-75"
-                    style="z-index: 5">
-                    {% for message in messages %}
-                    <div class="d-flex w-100 toast" role="alert" aria-live="assertive" aria-atomic="true">
-                        <span class="m-auto px-2">
-                            <i class="bi bi-bell-fill"></i>
-                        </span>
-                        <div class="toast-body">
-                            <h4>{{ message }}</h4>
-                        </div>
-                        <a href="" class="me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"><i
-                                class="bi bi-x-circle"></i></a>
-                    </div>
-                    {% endfor %}
+                <div class="toast-container position-absolute top-1 start-50 translate-middle-x p-3 w-75" style="z-index: 5">
+                    {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                            {% for message in messages %}
+                                <div class="d-flex w-100 toast" role="alert" aria-live="assertive" aria-atomic="true">
+                                    <span class="m-auto px-2">
+                                        <i class="bi bi-bell-fill"></i>
+                                    </span>
+                                    <div class="toast-body">
+                                        <h4>{{ message }}</h4>
+                                    </div>
+                                    <a href="" class="me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"><i
+                                            class="bi bi-x-circle"></i></a>
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+                    {% endwith %}
                 </div>
-                {% endif %}
-                {% endwith %}
                 {% block content %}
 
                 {% endblock content %}
