--- a/templates/admin/edit_blog.html
+++ b/templates/admin/edit_blog.html
@@ -61,7 +61,7 @@
                         <input type="hidden" id="collection" value="blogs">
                         <input type="hidden" id="doc-id" value="{{ post._id }}">
                         <label for="drop-area" class="form-label">New Photo</label>
-                        <input type="file" name="photos" id="drop-file-elem">
+                        <input type="file" name="photos" id="drop-file-elem" accept="image/*">
                         <div id="drop-area" data-multiple="false">
                             <i class="bi bi-upload"></i>
                             Drag&drop file here or click to select...
