--- a/templates/admin/projects.html
+++ b/templates/admin/projects.html
@@ -11,7 +11,8 @@
     </div>
     <div class="row">
         <div class="col">
-            <a href="{{ url_for('add_project') }}" class="btn btn-round btn-success float-end m-4" data-bs-toggle="tooltip" data-bs-placement="left" title="Add new"><i class="bi bi-plus"></i></a>
+            <a href="{{ url_for('add_project') }}" class="btn btn-round btn-success float-end m-4"
+                data-bs-toggle="tooltip" data-bs-placement="left" title="Add new"><i class="bi bi-plus"></i></a>
         </div>
     </div>
     <div class="card">
@@ -20,30 +21,34 @@
         </div>
         <ul class="list-group list-group-flush">
             {% for project in projects %}
-                {% set photos = project.photos.split(',') %}
-                <li class="list-group-item d-flex justify-content-between">
-                    <div class="row w-100 align-items-center">
-                        <div class="col-6 offset-3 col-sm-2 offset-sm-0 text-center">
-                            <img src="{{ photos[0].replace(' ', '') }}" alt="{{ project.title }}" class="img-fluid mb-1">
-                            {% for photo in photos %}
-                                {% if loop.index0 != 0 %}
-                                    <img src="{{ photo.replace(' ', '') }}" alt="Photo {{ loop.index }}" class="w-25">
-                                {% endif %}
-                            {% endfor %}
-                        </div>
-                        <div class="col-12 col-sm-10">
-                            <h3 class="text-start">{{ project.title }}</h3>
-                            <span class="fst-italic">Slug: {{ project.slug }}</span><br>
-                            <small class="text-muted">Repo: {{ project.repo }}</small><br>
-                            <small class="text-muted">URL: {{ project.live_url }}</small>
-                            <p class="pt-2 fw-light">{{ project.description|truncate(250) }}</p>
-                        </div>
+            {% set photos = project.photos.split(',') %}
+            <li class="list-group-item d-flex justify-content-between">
+                <div class="row w-100 align-items-center">
+                    <div class="col-6 offset-3 col-sm-2 offset-sm-0 text-center">
+                        <img src="{{ url_for('uploads', filename=photos[0].replace(' ', '')) }}"
+                            alt="{{ project.title }}" class="img-fluid mb-1">
+                        {% for photo in photos %}
+                        {% if loop.index0 != 0 %}
+                        <img src="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
+                            alt="Photo {{ loop.index }}" class="w-25">
+                        {% endif %}
+                        {% endfor %}
                     </div>
-                    <div class="controls d-flex flex-column align-items-center justify-content-around ms-4">
-                        <a href="{{ url_for('delete_project', id=project._id) }}" class="btn btn-sm btn-danger confirm"><i class="bi bi-trash"></i></a>
-                        <a href="{{ url_for('edit_project', id=project._id) }}" class="btn btn-sm btn-light"><i class="bi bi-pencil"></i></a>
+                    <div class="col-12 col-sm-10">
+                        <h3 class="text-start">{{ project.title }}</h3>
+                        <span class="fst-italic">Slug: {{ project.slug }}</span><br>
+                        <small class="text-muted">Repo: {{ project.repo }}</small><br>
+                        <small class="text-muted">URL: {{ project.live_url }}</small>
+                        <p class="pt-2 fw-light">{{ project.description|truncate(250) }}</p>
                     </div>
-                </li>
+                </div>
+                <div class="controls d-flex flex-column align-items-center justify-content-around ms-4">
+                    <a href="{{ url_for('delete_project', id=project._id) }}" class="btn btn-sm btn-danger confirm"><i
+                            class="bi bi-trash"></i></a>
+                    <a href="{{ url_for('edit_project', id=project._id) }}" class="btn btn-sm btn-light"><i
+                            class="bi bi-pencil"></i></a>
+                </div>
+            </li>
             {% endfor %}
         </ul>
         <div class="card-footer"></div>
