--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -188,22 +188,22 @@ main {
 
 #drop-area {
     background-color: var(--main-bg-color);
-    border: 2px dashed var(--accent-dark);
-    border-radius: .5rem;
+    border-radius: 1rem;
     width: 100%;
     padding: 1rem;
+    margin-bottom: 1rem;
     text-align: center;
+    box-shadow: inset 1px 2px 2px rgba(0, 0, 0, .3);
+    transition: transform .3s ease-in-out, box-shadow .3s ease-in-out;
 }
 
-#drop-area:hover {
+#drop-area.highlight, #drop-area:hover {
     cursor: pointer;
     border-color: var(--accent);
     background-color: var(--text-light);
-}
-
-#drop-area.highlight {
-    border-color: var(--accent);
-    background-color: var(--text-light);
+    box-shadow: inset 3px 4px 2px rgba(var(--accent-dark-rgb), .5);
+    transform: scale(1.02);
+    color: var(--accent);
 }
 
 #drop-area .bi {
