--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -29,6 +29,28 @@ main {
     color: var(--text-light);
 }
 
+#spinner {
+    width: 4rem;
+    height: 4rem;
+    position: absolute;
+    z-index: 99999;
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+
+#spin-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, .2);
+    z-index: 9998;
+}
+
 /*------------------------------------------ BUTTONS */
 
 .btn-round {
